--- a/src/components/Projects/style.css
+++ b/src/components/Projects/style.css
@@ -15,11 +15,10 @@
   background-color: #616060 !important;
   color: #ffffff;
   width: 100% auto;
-  height: 100% auto;
-  margin-left: 15% auto;
+  height: 400px auto;
   margin-right: 10px;
   margin-bottom: 2em;
-
+  margin-left: 15% auto;
 }
 
 .projectCardImage {
